# Cpp-smallProjects

./: CMakeLists.txt  README.md  add.cpp
 tic-tac-toe/: tictactoe.cpp  tictactoe.h
adventOfCode/2025/: day3_1.cpp  day4_1.cpp  day5_1.cpp
algorithms/: LongestConsecutiveSequence.cpp  PerumutationInString.cpp  binarySearch.cpp  binaryTreeSearch.cpp  differentSorting.cpp  longestPalindromicSubstring.cpp  longestSubstring.cpp  main.cpp  matriceXbyY.cpp  node.cpp  queue.cpp  tokenize.cpp  uniDemo1.cpp  vec3.h
algorithms/leetcode/: 104_MaximumDepth.cpp  152_MaxProductSubarry.cpp  191_NumberOf1Bits.cpp  2239_FindClosest.cpp  242_Valid_Anagram.cpp  268_MissingNumber.cpp  338_CountingBits.cpp  3507_Minimum_Pair.cpp  49_Group_Anagrams.cpp  91_Decode_Ways.cpp
chapters/chapter11/: defaultArgs.cpp  deleteFunction.cpp  func-overloading.cpp  inheritance.cpp  template.cpp
chapters/chapter12/: binaryTreeCalculate.cpp  hAlgorithm.cpp  lvalueReference.cpp  pointers.cpp  referenceAsParameter.cpp  returnByReference.cpp  stdOptional.cpp  swapPractice.cpp
chapters/chapter13/: enumClass.cpp  enums.cpp  enumsInputString.cpp  pair.h  passingStructs.cpp  structExersice.cpp  structPointer.cpp  structs.cpp  structsTemplate.cpp
chapters/chapter14/: CGPAcalc.cpp  abstractClass.cpp  accessClasses.cpp  classExersice.cpp  classExersice2.cpp  (+2 more)
chpt8/: dowhile.cpp  while.cpp
cppProjectsForStudy/: CGPAcalc.cpp  WriteDeleteTodoFile.cpp  guessPassword.h  passwordIncorectGame.cpp  progBarThreads.cpp  stackImplement.cpp  timer.cpp
tic-tac-toe/: tictactoe.cpp  tictactoe.h  tictactoeLogic.cpp
(+65 files in other folders)
